--- a/blackbody.ui
+++ b/blackbody.ui
@@ -170,7 +170,7 @@
            <bool>false</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">height: 160px; width: 160 px; background-color: #d7f7ff; border-radius: 80px; </string>
+           <string notr="true">height: 160px; width: 160 px; background-color: #e9fffd; border-radius: 80px; </string>
           </property>
           <property name="text">
            <string/>
